--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -351,7 +351,7 @@ jobs:
       contains(github.event.pull_request.labels.*.name, 'safe to test')
 
   test-built-macos-wheel:
-    name: Test macOS built wheel (Universal)
+    name: Test macOS built wheel
     needs: build-macos-wheel
     runs-on: macos-latest
     strategy:
