--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -121,7 +121,7 @@ jobs:
           # Verify wheel structure
           twine check dist/*
 
-      - name: Build macOS wheel (Universal)
+      - name: Build macOS wheel
         if: runner.os == 'macOS'
         run: |
           # Create necessary directories
@@ -138,13 +138,25 @@ jobs:
           # Download native artifacts
           python scripts/download_artifacts.py $C2PA_VERSION
 
+          # Set platform name based on architecture
+          if [ "${{ inputs.architecture }}" = "universal2" ]; then
+            PLATFORM_NAME="macosx_10_9_universal2"
+          elif [ "${{ inputs.architecture }}" = "aarch64" ]; then
+            PLATFORM_NAME="macosx_11_0_arm64"
+          elif [ "${{ inputs.architecture }}" = "x86_64" ]; then
+            PLATFORM_NAME="macosx_10_9_x86_64"
+          else
+            echo "Unknown architecture: ${{ inputs.architecture }}"
+            exit 1
+          fi
+
           # Build wheel
-          python setup.py bdist_wheel --plat-name macosx_10_9_universal2
+          python setup.py bdist_wheel --plat-name $PLATFORM_NAME
 
           # Rename wheel to ensure unique filename
           cd dist
           for wheel in *.whl; do
-            mv "$wheel" "${wheel/macosx_10_9_universal2/macosx_10_9_universal2}"
+            mv "$wheel" "${wheel/$PLATFORM_NAME/$PLATFORM_NAME}"
           done
           cd ..
 
