fix: Build differently

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -357,7 +357,7 @@ jobs:
   test-built-macos-wheel:
     name: Test macOS built wheel
     needs: build-macos-wheel
-    runs-on: macos-latest
+    runs-on: ${{ matrix.runs-on }}
     strategy:
       matrix:
         include:
