fix: Prepare to publish to PyPI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -465,8 +465,8 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: dist
-          #Uncomment to use TestPyPI
-          repository-url: https://test.pypi.org/legacy/
+          # Uncomment to use TestPyPI
+          # repository-url: https://test.pypi.org/legacy/
           verbose: true
           # Uncomment below for test runs, otherwise fails on existing packages being reuploaded
           skip-existing: true
