Add generated doc files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ wheels/
 .installed.cfg
 *.egg
 
+# Sphinx docs
+docs/html
+
 # PyInstaller
 # Usually these files are written by a Python script from a template
 # before PyInstaller builds the exe, so as to inject date/other infos into it.
