docs: Add sphinx API docs (#164)
* Initial try for API docs generated by Sphinx

* Add .gitignore to _build dir

* Remove _build dir

* Add generated doc files to .gitignore

* Fix .gitignore

* Remove non-API docs from Sphinx docs

* Remove docs/_static/.gitkeep

* Move API docs to api-docs directory, update code comments and enable markdown code fences, move info on API doc generation to proj. contrib.

* Address Tania comments

* Add publish workflow

* Fix workflow per Tania comments

* Update wf with install dev deps and remove nx command

* Remove push to main as wf trigger, change pages to github-pages

* Change path where docs are built

* docs: Debug workflow (#169)

* fix: Bump version to c2pa C ffi v0.65.0 (#167)

* chore: Bump version number (#168)

Prepare release for v0.23.0.

* fix: Tag on release

* fix: On release only

* fix: Safer context handling in streams (#170)

* fix: 1

* fix: Update c2pa.py code

* fix: Renamings

* fix: Format

* fix: FInal formatting fixes

---------

Co-authored-by: tmathern <60901087+tmathern@users.noreply.github.com>
Co-authored-by: Tania Mathern <mathern@adobe.com>

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,12 @@ wheels/
 .installed.cfg
 *.egg
 
+# Sphinx docs
+api-docs/api
+api-docs/_build
+api-docs/_static
+api-docs/_preprocessed
+
 # PyInstaller
 # Usually these files are written by a Python script from a template
 # before PyInstaller builds the exe, so as to inject date/other infos into it.
