--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,29 @@ jobs:
         id: read-version
         run: echo "version=$(cat c2pa-native-version.txt | tr -d '\r\n')" >> $GITHUB_OUTPUT
 
+  check-format:
+    name: Check code format and syntax
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Install development dependencies
+        run: python -m pip install -r requirements-dev.txt
+
+      - name: Check Python syntax
+        run: python3 -m py_compile src/c2pa/c2pa.py
+        continue-on-error: true
+
+      - name: Check code style with flake8
+        run: flake8 src/c2pa/c2pa.py
+        continue-on-error: true
+
   tests-unix:
     name: Unit tests for developer setup (Unix)
     needs: read-version
