--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -368,7 +368,7 @@ jobs:
           - target: arm64
             runs-on: macos-latest
           - target: x86_64
-            runs-on: macos-13
+            runs-on: macos-15-intel
 
     if: |
       github.event_name != 'pull_request' ||
@@ -387,7 +387,7 @@ jobs:
           - target: arm64
             runs-on: macos-latest
           - target: x86_64
-            runs-on: macos-13
+            runs-on: macos-15-intel
 
     if: |
       github.event_name != 'pull_request' ||
